EDSC-273: Fix z-index issues with view project button

--- a/app/assets/stylesheets/modules/master_overlay.css.scss
+++ b/app/assets/stylesheets/modules/master_overlay.css.scss
@@ -135,6 +135,11 @@
       -webkit-transform: translateY(-50%);
       transform: translateY(-50%);
     }
+
+    a {
+      position: relative;
+      z-index:1;
+    }
     height: 36px;
   }
 
